# ICCAD23-760

./: README.md
instances/iwls22/: ex00.aig  ex01.aig  ex02.aig  ex03.aig  ex04.aig  ex05.aig  ex06.aig  ex07.aig  ex08.aig  ex09.aig  ex10.aig  ex11.aig  ex12.aig  ex13.aig  ex14.aig  ex15.aig  ex16.aig  ex17.aig  ex18.aig  ex19.aig  ex20.aig  ex21.aig  ex22.aig  ex23.aig  ex24.aig  ex25.aig  ex26.aig  ex27.aig  ex28.aig  ex29.aig  ex30.aig  ex31.aig  ex32.aig  ex33.aig  ex34.aig  ex35.aig  ex36.aig  ex37.aig  ex38.aig  ex39.aig  (+60 more)
instances/iwls23/: ex00.aig  ex01.aig  ex02.aig  ex03.aig  ex04.aig  ex05.aig  ex06.aig  ex07.aig  ex08.aig  ex09.aig  ex10.aig  ex11.aig  ex12.aig  ex13.aig  ex14.aig  ex15.aig  ex16.aig  ex17.aig  ex18.aig  ex19.aig  ex20.aig  ex21.aig  ex22.aig  ex23.aig  ex24.aig  ex25.aig  ex26.aig  ex27.aig  ex28.aig  ex29.aig  ex30.aig  ex31.aig  ex32.aig  ex33.aig  ex34.aig  ex35.aig  ex36.aig  ex37.aig  ex38.aig  ex39.aig  (+60 more)
src/: blifIO.py  encoderCircuits.py  reduce.py  reduceWithAbc.py  specification.py  synthesisManager.py  utils.py
src/bindings/: CMakeLists.txt
